# figgie

./: .gitignore  README.md  figgie-rules.txt  pyproject.toml
src/: base_strategy.py  custom_types.py  event.py  game_controller.py  game_types.py  main.py  order.py  player.py  quick_demo.py  strategies.py  strategy.py  strategy_demo.py
