[project]
name = "figgie"
version = "0.1.0"
description = "An algorithmic sandbox for Jane Street's market making game 'Figgie'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.19.0",
    "types-tensorflow>=2.18.0.20250516",
]
